<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Expert Maintenance</string>
    <string name="register">Register</string>
    <string name="phone">phone</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">sign up</string>
    <string name="login1">Login</string>
    <string name="login">Login</string>
    <string name="Textview" tools:ignore="DuplicateDefinition">TextView</string>
    <string name="textview">TextView</string>
</resources>