<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/Signup"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#0500BCD4"
        android:backgroundTint="#00BCD4"
        android:fontFamily="cursive"
        android:lineSpacingExtra="34sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0097A7"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        tools:text="Login" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:backgroundTint="#0AACC1"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lineSpacingExtra="24sp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/Password"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginBottom="432dp"
        android:backgroundTint="#00BCD4"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lineSpacingExtra="24sp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="215dp"
        android:layout_height="52dp"
        android:layout_marginBottom="356dp"
        android:backgroundTint="#00BCD4"
        android:fontFamily="cursive"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="189dp"
        android:layout_height="23dp"
        android:text="@string/textview"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn"
        app:layout_constraintVertical_bias="0.054"
        tools:text="New Here? Create Account" />

</androidx.constraintlayout.widget.ConstraintLayout>